--- a/index.html
+++ b/index.html
@@ -40,18 +40,21 @@
          </article>
 
          <article>
-            <h3>Con larga experiencia</h3>
+            <h3>Con larga experiencia</h3> 
             <p>
                Llevamos <b>desde 1998</b> ofreciendo propuestas diferentes 
                y acciones educativas concretas a escenarios diversos.<br>
                Diseñamos una solución educativa creativa a su problema cotidiano.<br>
-               <img src="https://www.html6.es/img_html/im17.jpg" align="top">   
             </p>   
+               <div>
+               <img src="https://www.html6.es/img_html/im17.jpg" align="top">
+               </div>      
          </article>
 
          <article>
             <h3>Con entusiasmo y motivación</h3>
-            La <b>motivación</b> y el <b>entusiasmo personal</b> mueve montañas y es lo que nos hace diferentes al resto.<br>
+            La <b>motivación</b> y el <b>entusiasmo personal</b> mueve montañas 
+            y es lo que nos hace diferentes al resto.<br>
             Pruébenos y se convencerá..
          </article>
 
